Sidebar and Carrousel fixed!

--- a/Mikus_40K/src/components/Navbar.css
+++ b/Mikus_40K/src/components/Navbar.css
@@ -1,13 +1,14 @@
+/* Estilo del navbar */
 .navbar {
   width: 100%;
-  height: 60px;
+  height: 60px; /* Altura del navbar */
   background-color: black;
   display: flex;
   align-items: center;
   justify-content: center;
   position: fixed;
   top: 0;
-  z-index: 1000;
+  z-index: 1000; /* Asegura que esté encima de otros elementos */
 }
 
 .navbar-text {
