--- a/Mikus_40K/src/index.css
+++ b/Mikus_40K/src/index.css
@@ -1,11 +1,11 @@
+/* Estilos globales */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background: linear-gradient(to right, #6a0001, #0d407f);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,6 +13,27 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Estilos del body (globales para toda la aplicación) */
+body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column; /* Asegura que los elementos se apilen verticalmente */
+  font-family: inherit; /* Usando la misma fuente global */
+  background: linear-gradient(to right, #6a0001, #0d407f);
+
+}
+
+/* Contenedor principal de la página */
+.main-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding-top: 60px; /* Asegura que el carrusel comience debajo del navbar */
+  overflow: hidden;
+}
+
+/* Estilos para los enlaces */
 a {
   font-weight: 500;
   color: #646cff;
@@ -22,19 +43,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
+/* Estilos para los botones */
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -54,15 +63,18 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+/* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
+  .carousel {
+    width: 100%; /* El carrusel ocupa todo el ancho */
+    margin-top: 60px; /* Alinea el carrusel debajo del navbar */
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+}
+
+/* Media query para pantallas más pequeñas */
+@media (max-width: 480px) {
+  .carousel {
+    width: 100%; /* El carrusel ocupa todo el ancho */
+    margin-top: 60px; /* Alinea el carrusel debajo del navbar */
   }
 }
