--- a/Mikus_40K/src/index.css
+++ b/Mikus_40K/src/index.css
@@ -4,8 +4,8 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(to right, #6a0001, #0d407f);
+  /*background: linear-gradient(to right, #6a0001, #0d407f);*/
+  background: #08284e;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,8 +20,8 @@ body {
   display: flex;
   flex-direction: column; /* Asegura que los elementos se apilen verticalmente */
   font-family: inherit; /* Usando la misma fuente global */
-  background: linear-gradient(to right, #6a0001, #0d407f);
-
+  /*background: linear-gradient(to right, #6a0001, #0d407f);*/
+  background: #08284e;
 }
 
 /* Contenedor principal de la página */
