--- a/Mikus_40K/src/components/Navbar.css
+++ b/Mikus_40K/src/components/Navbar.css
@@ -2,7 +2,7 @@
 .navbar {
   width: 100%;
   height: 60px; /* Altura del navbar */
-  background-color: rgb(109, 109, 109);
+  background-color: rgb(36, 36, 36);
   display: flex;
   align-items: center;
   justify-content: space-between; /* Esto distribuye los elementos a los extremos */
@@ -26,7 +26,7 @@
 
 /* Estilo del texto en el navbar */
 .navbar-text {
-  color: white;
+  color: rgb(255, 255, 255);
   font-size: 1.2rem;
   text-align: center; /* Alinea el texto al centro */
   flex-grow: 1; /* Asegura que el texto esté centrado */
