--- a/Mikus_40K/src/components/SidebarUser.css
+++ b/Mikus_40K/src/components/SidebarUser.css
@@ -5,7 +5,7 @@
   top: 0;
   width: 250px; /* Ancho del sidebar */
   height: 100%; /* Asegura que el sidebar ocupe toda la altura de la pantalla */
-  background-color: #8f8f8f;
+  background-color: #4a8a62;
   padding: 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   z-index: 1001; /* Asegúrate de que el sidebar esté encima del overlay */
@@ -53,7 +53,7 @@
 .sidebar-section button {
   width: 100%;
   padding: 10px;
-  background-color: #414141;
+  background-color: #555555;
   border: 1px solid #4b4b4b;
   border-radius: 5px;
   cursor: pointer;
@@ -63,8 +63,8 @@
 }
 
 .sidebar-section button:hover {
-  background-color: #00ffff;
-  border: 1px solid #00aaaa;
+  background-color: #4cc277;
+  border: 1px solid #4cc277;
 }
 
 .sidebar-section button:focus {
