--- a/Mikus_40K/src/components/Sidebar.css
+++ b/Mikus_40K/src/components/Sidebar.css
@@ -1,26 +1,61 @@
+/* Sidebar.tsx */
 .sidebar {
-    width: 250px; /* Tamaño del sidebar en pantallas grandes */
-    height: 100vh; /* Ocupa toda la altura de la página */
-    background-color: black;
-    color: white;
-    position: fixed;
-    top: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 999;
-    transition: transform 0.3s ease; /* Animación para el cambio de tamaño */
+  width: 250px; /* Tamaño del sidebar en pantallas grandes */
+  height: 100vh; /* Ocupa toda la altura de la página */
+  background-color: black;
+  color: white;
+  position: fixed;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+  transition: transform 0.3s ease; /* Animación para el cambio de tamaño */
+}
+
+/* Media query para pantallas medianas y pequeñas (menos de 768px) */
+@media (max-width: 768px) {
+  .sidebar {
+    transform: translateX(100%); /* Desplaza el sidebar hacia la derecha fuera de la pantalla */
   }
-  
-  .sidebar-text {
-    font-size: 1.5rem;
+}
+
+.sidebar-text {
+  font-size: 1.5rem;
+}
+
+/* Contenedor de imágenes en caída */
+.falling-images-container {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Toda la altura de la pantalla */
+  overflow: hidden; /* Ocultar lo que está fuera del contenedor */
+}
+
+/* Para las imágenes que caen */
+.falling-image {
+  position: absolute;
+  animation: fall 6s linear infinite; /* Animación de caída infinita */
+  opacity: 1; /* Empieza visible */
+}
+
+/* Las imágenes con tamaño aleatorio */
+.falling-img {
+  width: 100px; /* Tamaño de las imágenes */
+  height: auto;
+  border-radius: 2px; /* Bordes redondeados para las imágenes */
+  object-fit: cover; /* Asegura que las imágenes no se deformen */
+}
+
+/* Animación de caída con opacidad */
+@keyframes fall {
+  0% {
+    transform: translateY(-100px); /* Empieza fuera de la pantalla por encima */
+    opacity: 1; /* Totalmente visible */
   }
-  
-  /* Media query para pantallas medianas y pequeñas (menos de 768px) */
-  @media (max-width: 768px) {
-    .sidebar {
-      transform: translateX(100%); /* Desplaza el sidebar hacia la derecha fuera de la pantalla */
-    }
+  100% {
+    transform: translateY(100vh); /* Caen hasta el final de la pantalla */
+    opacity: 0; /* Se desvanece al final de la caída */
   }
-  
+}
