--- a/Mikus_40K/src/components/navbar/NavCont.css
+++ b/Mikus_40K/src/components/navbar/NavCont.css
@@ -2,7 +2,7 @@
 .navbar {
     height: 80px;
     background-color: rgb(36, 36, 36);
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: space-between; /* Cambia a 'space-between' para distribuir los elementos */
     position: fixed;
