--- a/Mikus_40K/src/index.css
+++ b/Mikus_40K/src/index.css
@@ -4,7 +4,7 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  background: #39C5BB; /* Gradiente que combina Warhammer 40k y Hatsune Miku */
+  background: #000000; /* Gradiente que combina Warhammer 40k y Hatsune Miku */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,7 +19,7 @@ body {
   display: flex;
   flex-direction: column; /* Asegura que los elementos se apilen verticalmente */
   font-family: inherit; /* Usando la misma fuente global */
-  background:#39C5BB; /* Gradiente que combina Warhammer 40k y Hatsune Miku */
+  background:#000000; /* Gradiente que combina Warhammer 40k y Hatsune Miku */
 }
 
 /* Contenedor principal de la página */
@@ -34,11 +34,11 @@ body {
 /* Estilos para los enlaces */
 a {
   font-weight: 500;
-  color: #39C5BB; /* Turquesa (Hatsune Miku) */
+  color: #000000; /* Turquesa (Hatsune Miku) */
   text-decoration: inherit;
 }
 a:hover {
-  color: #FFD700; /* Amarillo dorado (Warhammer 40k) */
+  color: #000000; /* Amarillo dorado (Warhammer 40k) */
 }
 
 /* Estilos para los botones */
@@ -55,8 +55,8 @@ button {
   transition: border-color 0.25s, background-color 0.25s;
 }
 button:hover {
-  border-color: #8B0000; /* Rojo oscuro (Warhammer 40k) */
-  background-color: #8B0000; /* Rojo oscuro para efecto hover */
+  border-color: #000000; /* Rojo oscuro (Warhammer 40k) */
+  background-color: #000000; /* Rojo oscuro para efecto hover */
   color: #F5F5F5; /* Blanco para contraste */
 }
 button:focus,
