--- a/Mikus_40K/src/components/product/Product.css
+++ b/Mikus_40K/src/components/product/Product.css
@@ -73,7 +73,7 @@
 .product-card h3 {
   font-size: 1.2rem; /* Ajusta el tamaño de la fuente del título */
   margin: 5px 0;
-  color: #333; /* Asegúrate de que el color del título sea visible */
+  color: #3cffff; /* Asegúrate de que el color del título sea visible */
 }
 
 /* Estilo para el precio dentro de las tarjetas */
