--- a/Mikus_40K/src/components/navbar/NavCont.css
+++ b/Mikus_40K/src/components/navbar/NavCont.css
@@ -225,4 +225,24 @@
   color: white;
 }
 
+/* Estilo del botón del carrito de compras */
+.cart-button {
+  background-color: #0eeadf;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-size: 1rem;
+  padding: 10px 15px;
+  cursor: pointer;
+  position: absolute;
+  right: 20px; /* Ajusta la posición hacia la derecha */
+  top: 50%; /* Centra verticalmente en el sub-navbar */
+  transform: translateY(-50%);
+}
+
+.cart-button:hover {
+  background-color: #009f9f;
+}
+
+
 }
