--- a/Mikus_40K/src/components/product/Product.css
+++ b/Mikus_40K/src/components/product/Product.css
@@ -60,6 +60,7 @@
   background-color: #272727;
   width: 200px; /* Define un ancho fijo para las tarjetas en pantallas grandes */
   color: #333; /* Color del texto en las tarjetas */
+  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transición suave para el hover */
 }
 
 /* Estilos para las imágenes dentro de las tarjetas */
@@ -95,4 +96,10 @@
   font-size: 0.9rem; /* Ajusta el tamaño de la fuente de la descripción */
   color: #c7c7c7; /* Color gris claro para la descripción */
   margin-top: 5px;
+}
+
+/* Efecto hover para las tarjetas (se eleva al pasar el mouse) */
+.product-card:hover {
+  transform: translateY(-10px); /* Mueve la tarjeta hacia arriba */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Aumenta la sombra para crear el efecto de elevación */
 }
