--- a/Mikus_40K/src/components/product/ProductDetail.css
+++ b/Mikus_40K/src/components/product/ProductDetail.css
@@ -17,7 +17,7 @@
 
 .product-image-container {
     width: 40%;
-    padding-left: 20px; /* Márgenes para que no quede pegado al borde izquierdo */
+    padding-left: 20px;
 }
 
 .product-image {
@@ -33,21 +33,21 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    background-color: #1e1e1e; /* Fondo oscuro, más acorde a los colores solicitados */
+    background-color: #EFEFEF; /* 1e1e1e */
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Sombra suave para destacar el contenedor */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .product-title {
     font-size: 2rem;
     font-weight: 600;
-    color: #FFD700 !important; /* Un tono anaranjado para el título */
+    color: #9e8600 !important; /* FFD700 */
 }
 
 .product-description {
     font-size: 1.1rem;
-    color: #c7c7c7; /* Gris claro azulado para la descripción */
+    color: #646464; /* c7c7c7 */
 }
 
 .product-price,
@@ -56,7 +56,7 @@
 .product-weight {
     font-size: 1.1rem;
     font-weight: 500;
-    color: #86ecec; /* Color verde hierba para los detalles importantes */
+    color: #007c7c; /* 86ecec */
 }
 
 .product-price strong,
@@ -64,7 +64,7 @@
 .product-size strong,
 .product-weight strong {
     font-weight: bold;
-    color: #FFD700; /* Dorado para resaltar la información más importante */
+    color: #9e8600; /* Dorado para resaltar la información más importante */
 }
 
 .product-shipping {
@@ -76,7 +76,6 @@
     color: #B0C4DE; /* Gris claro azulado para tamaño y peso */
 }
 
-/* Añadimos el botón de añadir al carrito */
 .add-to-cart-btn {
     background-color: #3CB371; /* Color verde hierba */
     color: white;
@@ -88,7 +87,7 @@
 }
 
 .add-to-cart-btn:hover {
-    background-color: #2E8B57; /* Verde más oscuro al pasar el ratón */
+    background-color: #2E8B57;
 }
 
 .add-to-cart-btn:focus {
