--- a/Mikus_40K/src/components/product/Product.css
+++ b/Mikus_40K/src/components/product/Product.css
@@ -54,6 +54,7 @@
   background-color: #EFEFEF;
   width: 200px;
   color: #333;
+  position: relative; /* Necesario para posicionar el botón de favorito */
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -90,4 +91,29 @@
 .product-card:hover {
   transform: translateY(-10px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.favorite-btn {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  background: transparent;
+  border: none;
+  font-size: 2px;
+  cursor: pointer;
+  transition: transform 0.2s;
+  color: red;
+}
+
+.favorite-btn:hover {
+  transform: scale(1.1);
+}
+
+.favorite-icon {
+  font-size: 24px;
+  transition: color 0.2s;
+}
+
+.favorite-btn:focus {
+  outline: none;
 }
